# katas

./: README.md
c++/: .gitignore
c++/marsrover/: CMakeLists.txt  MarsRover.cpp  MarsRover.h  MarsRoverTest.cpp
c++/string-calculator/: CMakeLists.txt  README.md  StringCalculator.cpp  StringCalculator.h  StringCalculatorTest.cpp
java/: .gitignore
java/marsrover/: pom.xml
java/marsrover/src/main/java/com/birlibirloque/katas/java/marsrover/: Direction.java  Grid.java  MarsRover.java  Position.java  Possition.java
java/marsrover/src/test/java/com/birlibirloque/katas/java/marsrover/: MarsRoverTest.java
java/roar-with-JUnit/: README.md  pom.xml
java/roar-with-JUnit/src/main/java/org/caf/socracomm/roar/: App.java  RegistroUsuarios.java
java/roar-with-JUnit/src/test/java/org/caf/socracomm/roar/: RegistroUsuariosTest.java
java/roar-with-TestNG/: README.md  pom.xml  user.lst
java/roar-with-TestNG/src/main/java/modularTDD/: CLIMain.java  RepositoryFileUser.java  RepositoryMemoryUser.java  RepositoryUser.java  User.java  UserService.java  UserServiceFactory.java
java/roar-with-TestNG/src/test/java/modularTDD/: UserRegisterTest.java  UserStoreTest.java
java/trip-service-kata/: README.md  pom.xml
java/trip-service-kata/src/main/java/com/birlibirloque/katas/java/tripservicekata/exception/: DependendClassCallDuringUnitTestException.java  UserNotLoggedInException.java
python/string-calculator/: README.md  TestStringCalculator.py
python/tennisgame/: tennis.py  testtennis.py
(+5 files in other folders)
